--- a/package.json
+++ b/package.json
@@ -1,4 +1,11 @@
 {
+  "name": "yearn-api",
+  "version": "1.0.0",
+  "description": "",
+  "main": "app.js",
+  "scripts": {
+    "start": "node --max-old-space-size=4096 app.js -enableServer 1"
+  },
   "devDependencies": {
     "prettier": "^2.1.1",
     "serverless-aws-documentation": "^1.1.0",
@@ -7,11 +14,15 @@
     "serverless-offline": "^6.7.0"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "bignumber": "^1.1.0",
     "delay": "^4.4.0",
     "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "lodash": "^4.17.20",
     "moment": "^2.28.0",
+    "mongodb": "^3.6.3",
+    "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "ramda": "^0.27.1",
     "web3": "^1.3.0"
