--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,7 @@ SUBGRAPH_ENDPOINT = https://api.thegraph.com/subgraphs/name/rrridges-crypto/year
 WEB3_ENDPOINT = https://mainnet.infura.io/v3/4f8bf400ab354820998e6dfdea0a1b78
 ARCHIVENODE_ENDPOINT = https://api.archivenode.io/93mwpmy684fb0dc3c0q93mwpmwlssf6a
 ETHERSCAN_API_KEY = GEQXZDY67RZ4QHNU1A57QVPNDV3RP1RYH4
+SLACK_HOOK_URL =
 
 AWS_ACCESS_KEY_ID = AKIA2FCIA3THEGVNNLSN
 AWS_SECRET_ACCESS_KEY = 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
