--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bignumber": "^1.1.0",
+    "cors": "^2.8.5",
     "delay": "^4.4.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
