--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -27,7 +27,7 @@ services:
       - database
     networks:
       - backend
-  webserver:
+  nginx:
     image: nginx:1.13
     container_name: webserver
     restart: unless-stopped
