--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,25 +25,10 @@ services:
       - "./models:/api/models:ro"
     depends_on: 
       - database
-  nginx:
-    image: nginx:1.13
-    container_name: nginx
-    restart: always
-    ports:
-      - "8000:8000"
-      - "8443:8443"
-    volumes:
-      - ./nginx:/etc/nginx/conf.d
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    command: "/bin/sh -c 'while :; do sleep 6h & wait $${!}; nginx -s reload; done & nginx -g \"daemon off;\"'"
-    depends_on:
-      - api
-  certbot:
-    image: certbot/certbot
-    volumes: 
-      - ./certbot/conf:/etc/letsencrypt
-      - ./certbot/www:/var/www/certbot
-    entrypoint: "/bin/sh -c 'trap exit TERM; while :; do certbot renew; sleep 12h & wait $${!}; done;'"
+    networks: 
+      - backend
 volumes: 
   mongodata:
+networks: 
+  backend: 
+    driver: bridge
