--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "node-cron": "^2.0.3",
     "node-fetch": "^2.6.1",
     "ramda": "^0.27.1",
+    "swagger-ui-express": "^4.1.6",
     "web3": "^1.3.0"
   }
 }
