--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "bignumber": "^1.1.0",
+    "body-parser": "^1.19.0",
     "coingecko-api": "^1.0.10",
     "cors": "^2.8.5",
     "delay": "^4.4.0",
