--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@ SUBGRAPH_ENDPOINT = https://api.thegraph.com/subgraphs/name/rrridges-crypto/year
 POLYGON_SUBGRAPH_ENDPOINT = 
 WEB3_ENDPOINT = https://mainnet.infura.io/v3/4f8bf400ab354820998e6dfdea0a1b78
 ARCHIVENODE_ENDPOINT = https://api.archivenode.io/93mwpmy684fb0dc3c0q93mwpmwlssf6a
-POLYGON_ARCHIVENODE_ENDPOINT = https://speedy-nodes-nyc.moralis.io/e783af49d36dc9636abd198b/polygon/mumbai/archive
+POLYGON_ARCHIVENODE_ENDPOINT =
 ETHERSCAN_API_KEY = GEQXZDY67RZ4QHNU1A57QVPNDV3RP1RYH4
 SLACK_HOOK_URL =
 
