--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bignumber": "^1.1.0",
     "body-parser": "^1.19.0",
     "coingecko-api": "^1.0.10",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "delay": "^4.4.0",
     "dotenv": "^8.2.0",
