--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ethereum-block-by-date": "^1.4.0",
     "ethers": "^5.4.1",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "lodash": "^4.17.20",
     "moment": "^2.28.0",
     "mongodb": "^3.6.3",
