--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ WEB3_ENDPOINT = https://mainnet.infura.io/v3/4f8bf400ab354820998e6dfdea0a1b78
 ARCHIVENODE_ENDPOINT = https://api.archivenode.io/93mwpmy684fb0dc3c0q93mwpmwlssf6a
 POLYGON_ARCHIVENODE_ENDPOINT =
 BSC_ARCHIVENODE_ENDPOINT =
+AVALANCHE_ARCHIVENODE_ENDPOINT =
 ETHERSCAN_API_KEY = GEQXZDY67RZ4QHNU1A57QVPNDV3RP1RYH4
 SLACK_HOOK_URL =
 
