--- a/.github/workflows/app.yml
+++ b/.github/workflows/app.yml
@@ -4,9 +4,9 @@ name: CI to Docker Hub
 on:
   # Triggers the workflow on push or pull request events but only for the app branch
   push:
-    branches: [ develop ]
+    branches: [ app ]
   pull_request:
-    branches: [ develop ]
+    branches: [ app ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -50,7 +50,7 @@ jobs:
           context: ./
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api-develop:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/api-app:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
 
