Update docker-compose config

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - backend
   api:
     container_name: "api"
-    image: daoventures/api-develop:latest
+    image: daoventures/api-app:latest
     restart: always
     env_file:
       - .env
